# apply-agent

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  lefthook.yml  test.md
.claude/: ecc-tools.json  identity.json  settings.json  settings.local.json.template
.claude/agents/: relay-langgraph-reviewer.md
.claude/commands/: migration-new.md
.claude/hooks/: pre-bash-protected-paths.sh  pre-llm-call-cost-warn.sh
.codex/: AGENTS.md  config.toml  hooks.json
.codex/agents/: relay-langgraph-reviewer.toml
.codex/hooks/: post-commit-lint.sh  post-edit-prompt-check.sh  pre-write-migration-check.sh  session-start-context-loader.sh
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  commitlint.config.js  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.yml  claim-implementation.md  config.yml  design-discussion.md  feature.yml  prompt-issue.yml
.github/workflows/: ai-review.yml  ci.yml  deploy.yml  eval.yml  guard.yml  migration-check.yml  nightly.yml  release.yml  secrets-scan.yml
.loop-state/: last-story.txt  round-1782770718.md  round-1782777995.md
agents/: .env.example  README.md  __init__.py  pyproject.toml
agents/api/: __init__.py  deps.py  errors.py  server.py
agents/coordinator/: __init__.py  dock_agent.py  dock_tools.py  router.py  user_brief.py  workflows.py
agents/events/: __init__.py  bus.py  consumers.py  handlers.py
agents/harness/: __init__.py  audit.py  checkpointer.py  context.py  cost_tracker.py  events.py  guards.py  llm.py  locale.py  mcp_client.py  permissions.py  screenshot_store.py  state.py  stream_events.py  ttar.py
agents/jobs/: __init__.py  ingest.py  sources.py
agents/mcp_dock/: __init__.py  server.py  tools.py
agents/mcp_probe/: README.md  __init__.py  bench.py  server.py  tools.py
agents/mcp_probe/tests/: test_smoke.py
agents/nodes/: __init__.py  appprep_agent.py  interview_agent.py  jobmatch_agent.py  resume_agent.py  resume_intake.py  resume_store.py  trend_agent.py
agents/prompts/appprep/: cover_letter.v1.md  form_answers.v1.md
agents/prompts/coordinator/: dock_agent.v1.md  intent_classifier.v1.md
agents/prompts/interview/: ask_question.v1.md  fetch_intel_jd.v1.md  translate_feedback.v1.md
agents/prompts/jobmatch/: parse_jd.v1.md
agents/prompts/resume/: build_from_scratch_draft.v1.md  customize.v1.md  customize.v2.md  normalize.v1.md  optimize_general.v1.md  parse.v1.md  proofread.v1.md  propose_bullet_edit.v1.md  structure_check.v1.md
agents/prompts/trend/: extract_skills.v1.md
agents/tests/: __init__.py  conftest.py  test_application_submitted.py  test_approve_tools_hitl.py  test_ask_clarification_tool.py  test_ask_stream_dock_route.py  test_ask_stream_resume.py  test_browser_tools.py  test_build_from_scratch_skip.py  test_chain1_dock_e2e_score.py  test_chain2_resume_optimize_e2e_score.py  test_chain3_prepare_application_e2e_score.py  test_chain4_interview_e2e_score.py  test_chain5_jobmatch_e2e_score.py  test_chain6_fabrication_e2e_score.py  test_chain7_trend_e2e_score.py  test_chain8_dual_track_e2e_score.py  test_chain9_extension_e2e_score.py  test_checkpointer_factory.py  test_context_compaction.py  test_cost_tracker.py  test_dock_agent.py  test_dock_streaming_e2e.py  test_dock_tools.py  test_error_envelope_404_locale.py  test_error_envelope_v2.py  test_event_consumers_p1_5.py  test_events.py  test_extension_map_fields.py  test_file_tools.py  test_jobmatch_parse_jd.py  test_jobs_ingest.py  test_locale_and_envelope.py  test_mcp_dock_server.py  test_mcp_dock_tools.py  test_openrouter_tool_calling.py  test_p2_2_tailor_quality.py  test_p2_3_find_jobs.py  test_p2_4_intel_web.py  test_p2_5_refine_cover.py  (+15 more)
agents/tests/contract/: test_agui_compat.py
agents/tests/fixtures/: agui_events.jsonl
agents/tests/fixtures/jd/: ashby_xyz-789.html  greenhouse_4071234.json  greenhouse_chain5-stripe.json  greenhouse_chain5-zh.json  lever_abc-123.json  lever_chain5-frontend.json
agents/tests/mcp_probe/: test_claude_desktop_config.py  test_e2e.py  test_e2e_live.py  test_smoke.py  test_tools.py
agents/tools/: __init__.py  applications.py  approve.py  auto.py  browser.py  file.py  notify.py  web.py
api/: CHANGELOG.md  package.json  tsconfig.json
api/src/: agent-fetch.ts  cache.test.ts  cache.ts  config.test.ts  config.ts  db.ts  docx-export.ts  docx-preview.ts  errors.test.ts  errors.ts  extract.test.ts  extract.ts  index.test.ts  index.ts  jobs.ts  llm.test.ts  llm.ts  locale.ts  markdown.test.ts  markdown.ts  ownership.test.ts  ownership.ts  pagination.test.ts  pagination.ts  pdf-layout.test.ts  pdf-layout.ts  pdf-render.ts  redis.ts  resume-export.ts  resume-markdown.test.ts  resume-markdown.ts  resume-parse.test.ts  resume-parse.ts  schemas.test.ts  schemas.ts  sql-injection.test.ts  storage.ts  types.ts
apps/extension/: manifest.json  package.json  tsconfig.json
docs/: README.md  agent-diff-guard-localhost-4757-product-ux-audit.md  data-model.md  market-analysis.md  privacy-security.md  product-spec.md  roadmap.md  ux-agent-intelligence-audit-localhost-3000.md  ux-agent-intelligence-fix-plan.md  vision.md
docs/architecture/: agent-architecture.md  agent-event-stream.md  agent-harness.md  agent-marketplace-deferred.md  cicd-aiops-harness.md  client-side-delivery.md  delivery-loop-plan.md  error-handling.md  system-overview.md  vantage-ui-mapping.md
docs/assets/: README.md  agent-execution-deep-diagrams.html  (+3 more)
infra/: CHANGELOG.md  CLAUDE.md  docker-compose.yml
scripts/: check-i18n-parity.mjs  check-prompts.py  check-protected-paths.sh  cost-estimate.py  db-health.sh  db-snapshot.sh  loop_probe_prepare_application.py  post-upload-ui-smoke.mjs  scrub-pii.py  seed-test-user.mjs  seed.sql  seo-validate.mjs  web-hydration-smoke.mjs  web-route-smoke.mjs
web/: .gitignore  CHANGELOG.md  bunfig.toml  next.config.ts  package.json  playwright.config.ts  tsconfig.json
web/src/: proxy.ts
(+272 files in other folders)
