# pyproject.toml — Relay agents layer
#
# Caller: `uv sync` from this dir; CI ci.yml's `agents` job uses uv to install
# + ruff/mypy/pytest. No data file IO.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-agents"
version = "0.1.0"
description = "Relay LangGraph agent layer (5 agents + Coordinator + Vantage UI bindings)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "deepeval>=1.5.0",
    "pyyaml>=6.0",  # eval/delivery-loop/run.py reads golden.yaml
]
# Hidden MCP probe — see docs/architecture/agent-marketplace-deferred.md.
# Kept out of main deps so a normal `uv sync` doesn't pull MCP SDK.
# langchain-mcp-adapters bridges MCP tools into LangGraph create_react_agent
# (used by tests/mcp_probe/test_e2e_live.py for the live OpenRouter round-trip).
experimental = [
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
]

[tool.setuptools]
# The directory holding this pyproject IS the `agents` package (has __init__.py),
# and imports are namespaced `agents.api`, `agents.nodes`, etc. Map the `agents`
# package to this dir so flat-layout subdirs install as a single coherent package
# without touching any `from agents.*` import in the source.
package-dir = { "agents" = "." }
packages = [
    "agents",
    "agents.api",
    "agents.coordinator",
    "agents.events",
    "agents.harness",
    "agents.mcp_probe",
    "agents.nodes",
    "agents.tools",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PG/Redis (slow)",
    "smoke: OpenRouter live calls (cost real money)",
]
