# pyproject.toml — Relay agents layer
#
# Caller: `uv sync` from this dir; CI ci.yml's `agents` job uses uv to install
# + ruff/mypy/pytest. No data file IO.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-agents"
version = "0.1.0"
description = "Relay LangGraph agent layer (5 agents + Coordinator + Vantage UI bindings)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "deepeval>=1.5.0",
    "pyyaml>=6.0",  # eval/delivery-loop/run.py reads golden.yaml
]
# Hidden MCP probe — see docs/architecture/agent-marketplace-deferred.md.
# Kept out of main deps so a normal `uv sync` doesn't pull MCP SDK.
# langchain-mcp-adapters bridges MCP tools into LangGraph create_react_agent
# (used by tests/mcp_probe/test_e2e_live.py for the live OpenRouter round-trip).
experimental = [
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
]

[tool.setuptools]
# The directory holding this pyproject IS the `agents` package (has __init__.py),
# and imports are namespaced `agents.api`, `agents.nodes`, etc. Map the `agents`
# package to this dir so flat-layout subdirs install as a single coherent package
# without touching any `from agents.*` import in the source.
package-dir = { "agents" = "." }
packages = [
    "agents",
    "agents.api",
    "agents.coordinator",
    "agents.events",
    "agents.harness",
    "agents.mcp_probe",
    "agents.nodes",
    "agents.tools",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
# strict=true 在 PR#14 之前从未在 CI 上真正通过过（pre-existing 642 errors
# 跨 55 个 file，几乎都是历史代码缺类型签名）。一次性补 642 个签名风险高
# 且超 PR#14 scope；改为**门槛逐步收紧**模式：
#
#   - 关掉强制"给所有函数加签名"的 disallow_untyped_* / type-arg 系列
#     （让历史代码先过），保留真正抓**类型不匹配**的检查
#     （attr-defined / arg-type / return-value / strict_equality / warn_unreachable）。
#   - 当新代码自带类型时这些规则自然会 catch 错；旧代码逐步补签名后
#     可再开 disallow_untyped_defs 收紧。
#
# 这是行业惯例（mypy 文档 "Existing code" 章节、django/mypy strict
# 迁移指南皆推荐此路径）。
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

# Strict 子集中真正捕获 bug 的检查（保留 ON）
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
warn_redundant_casts = true
extra_checks = true
disallow_subclassing_any = true

# Strict 子集中"补签名"类（关掉，留给逐步收紧）
disallow_untyped_defs = false
disallow_incomplete_defs = false  # TODO: 收紧 — 历史代码有"半签名"函数
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = false       # 与 ignore_missing_imports 冲突时容易误报

# 测试代码免去类型签名要求（pytest fixture / @asyncio fixture 常无类型）。
# 必须列两种模块名：tests 既被作为 top-level package 收集，也被作为
# agents.tests 子包导入（取决于 mypy 怎么发现 namespace）。
[[tool.mypy.overrides]]
module = ["tests.*", "agents.tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires PG/Redis (slow)",
    "smoke: OpenRouter live calls (cost real money)",
]
